--- a/TinyMoneyManager.WP71/Language/AppResources.en-US.resx
+++ b/TinyMoneyManager.WP71/Language/AppResources.en-US.resx
@@ -2404,4 +2404,10 @@ Have fun!</value>
   <data name="Yesterday" xml:space="preserve">
     <value>Yesterday</value>
   </data>
+  <data name="Login" xml:space="preserve">
+    <value>Login</value>
+  </data>
+  <data name="SignUp" xml:space="preserve">
+    <value>Sign Up</value>
+  </data>
 </root>
