--- a/TinyMoneyManager.WP71/Language/AppResources.resx
+++ b/TinyMoneyManager.WP71/Language/AppResources.resx
@@ -2404,4 +2404,10 @@ Continue?</value>
   <data name="UnitOfPriceTitle" xml:space="preserve">
     <value>Unit(e.g. dollars)</value>
   </data>
+  <data name="Login" xml:space="preserve">
+    <value>Login</value>
+  </data>
+  <data name="SignUp" xml:space="preserve">
+    <value>Sign Up</value>
+  </data>
 </root>
