--- a/TinyMoneyManager.WP71/Language/AppResources.zh-CN.resx
+++ b/TinyMoneyManager.WP71/Language/AppResources.zh-CN.resx
@@ -2422,4 +2422,10 @@
 
 *手机账本不会泄露您的语音数据。</value>
   </data>
+  <data name="Login" xml:space="preserve">
+    <value>登录</value>
+  </data>
+  <data name="SignUp" xml:space="preserve">
+    <value>注册</value>
+  </data>
 </root>
